# windows-cmake-cicd

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: windows.yml
include/libA/: liba.h
source/: liba.cpp
test/: CMakeLists.txt  test_liba.cpp
